♻️ src로 코드 이동

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -229,4 +229,4 @@ apply from: file("../../node_modules/@react-native-community/cli-platform-androi
 project.ext.vectoricons = [
     iconFontNames: [ 'MaterialIcons.ttf']
 ]
-apply from "../../node_modules/react-native-vector-icons/fonts.gradle"
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
