--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/auth": "^14.2.1",
     "@react-native-firebase/firestore": "^14.2.1",
     "@react-native-firebase/storage": "^14.2.1",
+    "@react-native-google-signin/google-signin": "7.0.4",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
