--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.highball">
+  package="com.tmmoond8.highball">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
