--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eventemitter3": "^4.0.7",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-auto-height-image": "^3.2.4",
     "react-native-dotenv": "^3.3.1",
     "react-native-image-picker": "^4.7.0",
     "react-native-pager-view": "^5.4.9",
