--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-native": "0.66.3",
     "react-native-auto-height-image": "^3.2.4",
     "react-native-dotenv": "^3.3.1",
+    "react-native-get-random-values": "^1.7.2",
     "react-native-image-picker": "^4.7.0",
     "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-tab-view": "^3.1.1",
-    "react-native-vector-icons": "^9.0.0"
+    "react-native-vector-icons": "^9.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
