--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.1.5",
     "@react-native-firebase/app": "^14.2.1",
     "@react-native-firebase/auth": "^14.2.1",
     "@react-native-firebase/firestore": "^14.2.1",
