--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@woowa-babble/random-nickname": "^1.0.2",
     "eventemitter3": "^4.0.7",
     "react": "17.0.2",
     "react-native": "0.66.3",
