--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.1.5",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-firebase/app": "^14.2.1",
     "@react-native-firebase/auth": "^14.2.1",
     "@react-native-firebase/firestore": "^14.2.1",
