--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
     "uuid": "^8.3.2"
