--- a/ios/highball/Info.plist
+++ b/ios/highball/Info.plist
@@ -37,14 +37,14 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSExceptionDomains</key>
+		<!-- <key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
-		</dict>
+		</dict> -->
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
